@@ -7,7 +7,14 @@
 # That is no longer the case, so you need to specify
 # the full path to your R3.14.7 or R3.14.8.2 base etc.
 
-EPICS_BASE=/ade/epics/supTop/base/R3.14.9
-ETHER_IP=/ade/epics/supTop/share/R3.14.9/ether_ip/ether_ip-2-16_3-14-9
+# EPICS_BASE usually appears last so other apps can override stuff:
+EPICS_VER=R3.14.8.2
+EPICS_BASE_RELEASE=/ade/epics/supTop/base/$(EPICS_VER)
+SHARE=/ade/epics/supTop/share/$(EPICS_VER)
+EPICS_EXTENSIONS=/ade/epics/supTop/extensions/$(EPICS_VER)
+
+EPICS_BASE=$(EPICS_BASE_RELEASE)
+ETHER_IP=$(SHARE)/ether_ip/Development
+#ETHER_IP=$(SHARE)/ether_ip/ether_ip-2-17
 
 # MSI=$(EPICS_EXTENSIONS)/bin/$(EPICS_HOST_ARCH)/msi
